--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cambay:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+
 .img-carrusel {
-  width: 100%;
+  height:100%;
+  width:100%;
+  top:0px;
+  left:0px;
   max-height: 520px;
 }
 
@@ -193,6 +197,10 @@ textarea {
   border: 3px solid #bb2929;
 }
 
+main{
+  padding-bottom: 30px;
+}
+
 footer .direccion {
   background: #1E2029;
   padding: 30px 0;
@@ -253,9 +261,11 @@ footer .social a.youtube {
     text-align: center;
   }
 
-  footer .direccion .logo img {
-    margin-top: 20px;
+  footer .logo{
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
+   
 }
 
 @media screen and (max-width: 575px) {
