--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 
 
 .img-carrusel {
-  height:100%;
-  width:100%;
-  top:0px;
-  left:0px;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  left: 0px;
   max-height: 520px;
 }
 
@@ -50,7 +50,7 @@
   color: #24CDC1;
 }
 
-.card-img-top{
+.card-img-top {
   max-height: 230px;
 }
 
@@ -60,45 +60,46 @@
   border: none;
 }
 
-.btn-cards{
-  color: #ffffff;
-    background: #115b9b;
-    border: none;
-    padding: 10px;
-}
-
-.btn-cards:hover{
-  background-color: #24CDC1;
-}
-
-.btn-form{
+.btn-cards {
   color: #ffffff;
   background: #115b9b;
   border: none;
   padding: 10px;
 }
-.btn-form:hover{
+
+.btn-cards:hover {
   background-color: #24CDC1;
 }
 
-.oferta{
+.btn-form {
+  color: #ffffff;
+  background: #115b9b;
+  border: none;
+  padding: 10px;
+}
+
+.btn-form:hover {
+  background-color: #24CDC1;
+}
+
+.oferta {
   color: #24cdc1;
   font-size: 25px;
   font-family: 'Arimo';
   font-style: normal;
 }
 
-#titulo-contacto{
+#titulo-contacto {
   padding-top: 80px;
 }
 
-.card-body{
+.card-body {
   padding-left: 0px;
   padding-right: 0px;
   padding-bottom: 5px;
 }
 
-.card-text{
+.card-text {
   padding-top: 5x;
   color: #acadb2;
   font-size: 15px;
@@ -109,7 +110,7 @@
   padding-left: 33px;
 }
 
-.card-title{
+.card-title {
   padding-left: 10px;
   padding-bottom: 5px;
   border-bottom: 0.5px solid rgba(151, 146, 146, .5);
@@ -125,9 +126,9 @@ textarea {
   resize: none;
 }
 
-.titulo-seccion{
+.titulo-seccion {
   font-weight: 700;
-  color:#1E2029;
+  color: #1E2029;
   text-align: left;
   font-family: 'Cambay';
   font-style: italic;
@@ -143,14 +144,14 @@ textarea {
 .formulario-input-error-activo {
   display: block;
   position: absolute;
-  z-index: 100;
+  z-index: 10;
 }
 
 .formulario-validacion {
   position: absolute;
   right: 23px;
-  bottom: 10px;
-  z-index: 100;
+  bottom: 20px;
+  z-index: 10;
   font-size: 16px;
   opacity: 0;
 }
@@ -179,6 +180,10 @@ textarea {
   display: block;
 }
 
+.formulario-grupo {
+  padding-bottom: 10px;
+}
+
 .formulario-grupo-correcto .formulario-validacion {
   color: #1ed12d;
   opacity: 1;
@@ -197,7 +202,7 @@ textarea {
   border: 3px solid #bb2929;
 }
 
-main{
+main {
   padding-bottom: 30px;
 }
 
@@ -256,20 +261,108 @@ footer .social a.youtube {
   background: #cd201f;
 }
 
+@media screen and (max-width: 1299px) {
+  .img-carrusel {
+    max-height: 490px;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .img-carrusel {
+    max-height: 450px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .img-carrusel {
+    max-height: 400px;
+  }
+}
+
+@media screen and (max-width: 998px) {
+  .img-carrusel {
+    max-height: 380px;
+  }
+}
+
+@media screen and (max-width: 945px) {
+  .img-carrusel {
+    max-height: 350px;
+  }
+}
+
+@media screen and (max-width: 875px) {
+  .img-carrusel {
+    max-height: 320px;
+  }
+}
+
+@media screen and (max-width: 798px) {
+  .img-carrusel {
+    max-height: 300px;
+  }
+}
+
+
 @media screen and (max-width: 768px) {
   footer .direccion {
     text-align: center;
   }
 
-  footer .logo{
+  footer .logo {
     padding-top: 10px;
     padding-bottom: 10px;
   }
-   
+}
+
+@media screen and (max-width: 730px) {
+  .img-carrusel {
+    max-height: 280px;
+  }
+}
+
+@media screen and (max-width: 695px) {
+  .img-carrusel {
+    max-height: 250px;
+  }
+}
+
+@media screen and (max-width: 615px) {
+  .img-carrusel {
+    max-height: 240px;
+  }
+}
+
+@media screen and (max-width: 595px) {
+  .img-carrusel {
+    max-height: 230px;
+  }
 }
 
 @media screen and (max-width: 575px) {
   .card-img-top {
     max-height: 600px;
+  }
+
+  .img-carrusel {
+    max-height: 210px;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .img-carrusel {
+    max-height: 200px;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .img-carrusel {
+    max-height: 180px;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .img-carrusel {
+    max-height: 160px;
   }
 }
